#375 - Add overloads of UserAccountManagement.create(…) taking an Iterable<Role>.
Syntactic sugar for developer convenience.